--- a/css/styles.css
+++ b/css/styles.css
@@ -64,6 +64,52 @@ body {
 .address-item.link {
   color: var(--brand-color);
 }
+hero sect
+
+/* hero section */
+.hero {
+  background-color: var(--header-link-color);
+}
+.head {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 56px;
+  line-height: 60px;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+  background-color: var(--header-link-color);
+}
+
+/* batton */
+.btn {
+  background-color: var(--logo-color);
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  cursor: pointer;
+}
+
+.btn:hover,
+.btn:focus {
+  color: #404bbf;
+}
+
+/* features section */
+.features-head {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: var(--header-link-color);
+}
+.features-paragraf {
+  letter-spacing: 0.02em;
+}
 /* footer */
 .footer {
   background-color: var(--header-link-color);
@@ -84,4 +130,43 @@ body {
 .footer-logo-item,
 .footer .text {
   color: #f4f4fd;
+}
+
+/* product section */
+.title {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 40px;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+}
+
+/* team seection */
+.team {
+  background-color: #f4f4fd;
+}
+
+.team-item {
+  background-color: #ffffff;
+}
+.team-title {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  text-align: center;
+  letter-spacing: 0.02em;
+}
+.team-posicion {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  text-align: center;
+  letter-spacing: 0.02em;
 }
